--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,18 @@ spring.datasource.url =  jdbc:h2:mem:testdb
 spring.datasource.username = sa
 spring.datasource.password =  password
 spring.datasource.driverClassName = org.h2.Driver
-logging.level.org.zalando.logbook =  TRACE
+logging.level.org.zalando.logbook =  DEBUG
+#logging.level.org.springframework.web = DEBUG
+#
+logging.level.com.example.demo_logging.service = DEBUG
+logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
 
-log4j.appender.consoleAppender=org.apache.log4j.ConsoleAppender
-log4j.appender.consoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.consoleAppender.layout.ConversionPattern=%-4r [%t] %5p %c %x - %m%n
-log4j.rootLogger = TRACE, consoleAppender
+#log4j.appender.consoleAppender=org.apache.log4j.ConsoleAppender
+#log4j.appender.consoleAppender.layout=org.apache.log4j.PatternLayout
+#log4j.appender.consoleAppender.layout.ConversionPattern=%-4r [%t] %5p %c %x - %m%n
+#log4j.rootLogger = INFO, consoleAppender
+
+server.port = 9090
+proxy.use=true
